--- a/wa/wa1.html
+++ b/wa/wa1.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <p>Hello, World!</p>
-        <p>My name is NAME</p> Gabby
+        <p>My name is Gabby</p> 
     </body>
 </html>
